@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2102 2011/12/19 12:29:08 mg Exp $
+# $Id: CHANGES,v 1.2103 2011/12/19 18:56:19 cg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.0.beta4 2012-01-??
+ - 2011-12-19 Fixed bug#7666 - Queue Preferences potentially slow, thanks to Stefan Bedorf for the patch.
  - 2011-12-19 Updated Polish translation file, thanks to Pawel!
  - 2011-12-16 Fixed Lithuanian language file encoding.
  - 2011-12-16 Added OTRS 2.4-style article colors to the article list in AgentTicketZoom.
